# lab-python-mock-server

./: .env.development  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml
charts/lab-python-mock-server/: Chart.yaml  values.yaml
charts/lab-python-mock-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/lab-python-mock-server/templates/tests/: test-connection.yaml
src/: pyproject.toml
src/lab_mock/: __init__.py
src/lab_mock/templates/: index.jinja2
