[tool.poetry]
name = "lab_mock"
version = "0.2.0"
description = "A mock python web app for Anomaly labs"
authors = ["Dev Mukherjee <devraj@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
uvicorn = "^0.20.0"
asgiref = "^3.6.0"
markupsafe = "^2.1.2"
werkzeug = "^2.2.3"
h11 = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
